{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d2ed5b2e-b2b8-42e9-8e4c-595a8130a435",
            "actions": [
                {
                    "name": "moving",
                    "type": "Value",
                    "id": "46cc1fa1-b722-4cf7-bad8-131cf48e3321",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "run",
                    "type": "Value",
                    "id": "87ff3603-f9fb-45bb-bdbe-e5b6146726d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "attack",
                    "type": "Value",
                    "id": "39397251-eb86-4db4-bdf5-db1e53345e4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "lighting",
                    "type": "Value",
                    "id": "79ecc59b-ae53-40ad-87f3-7fe200f3c1c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "interactive",
                    "type": "Value",
                    "id": "5df7c6b5-c163-40b1-98bc-1a371d0ebaec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "dash",
                    "type": "Value",
                    "id": "968d1249-5601-40bc-925b-f13f11a16193",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c411ee42-8cc4-44ca-8309-69d1ea398450",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "54a70664-6cb2-4e69-ba77-5d1187aa0030",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "019c88fd-d677-4ba7-85bb-52424a7fb8e3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e9f73467-29b4-4632-b0ca-1ba372d945b4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cf5fd7b6-a3a2-4784-8730-d409c85eb63a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d086fd7f-021e-4695-a98e-6a09be675668",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6f6fd396-fb93-4c3b-86d2-442bd39ec0a4",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bd9cd4d-8b87-4ae7-9b1b-0b5ef19b8274",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lighting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "263eb075-2d65-4c78-b608-8de576469aea",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "interactive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fbbb72d-535b-4707-a915-b8c23050d37c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "490950b7-1241-4b9b-814c-3bdd3c0b98cf",
            "actions": [
                {
                    "name": "backage",
                    "type": "Value",
                    "id": "fa19b543-c6a3-4f95-ab97-7a5db9043aae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "menu",
                    "type": "Value",
                    "id": "18531e78-6d18-402e-a57f-d58cbcf9db04",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28c96b38-5a70-424e-a317-6390dc1d4437",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "backage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a352033-6ce8-4f79-8f30-65972756a8e6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}